[gd_scene load_steps=27 format=3 uid="uid://d01j4f253dh61"]

[ext_resource type="Script" uid="uid://dq84t65h5eo5t" path="res://Assets/player.gd" id="1_f1ek2"]
[ext_resource type="Texture2D" uid="uid://dnxj1e55wf00i" path="res://Art/TheDude/Idle.png" id="2_cvnsp"]
[ext_resource type="Shader" uid="uid://d1rhew4ybwfr5" path="res://Shaders/Shader.gdshader" id="2_fkybt"]
[ext_resource type="Texture2D" uid="uid://cwimwsruupi2t" path="res://Art/TheDude/Run.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://cddsu0cugxf14" path="res://Art/TheDude/InAir.png" id="3_vgqql"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="6_f1ek2"]
[ext_resource type="Texture2D" uid="uid://30ac3flq4iku" path="res://Art/WallJump.png" id="6_tx1dd"]
[ext_resource type="AudioStream" uid="uid://b52h6qqs2frkt" path="res://Sounds/Raw/Manly ouch.mp3" id="7_ds5gj"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="7_tx1dd"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="8_gymyn"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="9_pu2lt"]
[ext_resource type="Script" uid="uid://obqljqlbvyu8" path="res://Assets/hud.gd" id="11_uwngq"]
[ext_resource type="AudioStream" uid="uid://dygdnkbmh4d2a" path="res://Sounds/Raw/Jump Grunt.mp3" id="13_vbai1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v0iea"]
radius = 12.0
height = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x3wgy"]
shader = ExtResource("2_fkybt")
shader_parameter/colour = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_vgqql")
region = Rect2(800, 0, 800, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("3_vgqql")
region = Rect2(1600, 0, 800, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 0, 750, 1100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("2_cvnsp")
region = Rect2(750, 0, 750, 1100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("2_cvnsp")
region = Rect2(1500, 0, 750, 1100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_vgqql")
region = Rect2(0, 0, 800, 1300)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 0, 800, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(800, 0, 800, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_6t5aa")
region = Rect2(1600, 0, 800, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(2400, 0, 800, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvnsp"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 9999.0,
"texture": SubResource("AtlasTexture_pu2lt")
}],
"loop": true,
"name": &"FALL",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fkybt")
}],
"loop": true,
"name": &"IDLE",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"JUMP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"RUN",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tx1dd")
}],
"loop": true,
"name": &"WALL JUMP",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 35
script = ExtResource("1_f1ek2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_v0iea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_x3wgy")
scale = Vector2(0.04, 0.04)
sprite_frames = SubResource("SpriteFrames_cvnsp")
animation = &"WALL JUMP"

[node name="RayCast2D-LEFT" type="RayCast2D" parent="."]
target_position = Vector2(-22, 0)

[node name="RayCast2D-RIGHT" type="RayCast2D" parent="."]
target_position = Vector2(22, 0)

[node name="Ouch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ds5gj")
volume_db = -3.008
max_polyphony = 5

[node name="PlayerState" type="Node" parent="."]
script = ExtResource("6_f1ek2")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="PlayerState"]
script = ExtResource("7_tx1dd")
initial_state = NodePath("Idle")

[node name="Knockback" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Bounced" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="Bounce" type="Node" parent="PlayerState/Root/Bounced"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="Bounce End" type="Node" parent="PlayerState/Root/Bounced"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"BounceEnd"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")

[node name="Fall" type="Node" parent="PlayerState/Root/Idle"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"Fall"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="PlayerState/Root/Idle"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"Jump"
delay_in_seconds = "0.0"

[node name="Move" type="Node" parent="PlayerState/Root/Idle"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Walking")
event = &"Moved"
delay_in_seconds = "0.0"

[node name="Bounce" type="Node" parent="PlayerState/Root/Idle"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="Walking" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")

[node name="Fall" type="Node" parent="PlayerState/Root/Walking"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Falling")
event = &"Fall"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="PlayerState/Root/Walking"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"Jump"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="PlayerState/Root/Walking"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Idle")
event = &"Stopped"
delay_in_seconds = "0.0"

[node name="Bounce" type="Node" parent="PlayerState/Root/Walking"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="Falling" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")

[node name="Land and Stop" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Idle")
event = &"Stopped"
delay_in_seconds = "0.0"

[node name="Land and Move" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Walking")
event = &"Landed"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"Jump"
delay_in_seconds = "0.0"

[node name="Wall Jump" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Wall Jumping")
event = &"Wall Jump"
delay_in_seconds = "0.0"

[node name="Fall" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Falling")
event = &"Fall"
delay_in_seconds = "0.0"

[node name="Bounce" type="Node" parent="PlayerState/Root/Falling"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="Jumping" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")

[node name="Fall" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Falling")
event = &"Fall"
delay_in_seconds = "0.0"

[node name="Land and Stop" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Idle")
event = &"Stopped"
delay_in_seconds = "0.0"

[node name="Land and Move" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Walking")
event = &"Landed"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("..")
event = &"Jump"
delay_in_seconds = "0.0"

[node name="Wall Jump" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Wall Jumping")
event = &"Wall Jump"
delay_in_seconds = "0.0"

[node name="Bounce" type="Node" parent="PlayerState/Root/Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="Wall Jumping" type="Node" parent="PlayerState/Root"]
script = ExtResource("8_gymyn")

[node name="WallJumpend" type="Node" parent="PlayerState/Root/Wall Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Jumping")
event = &"WallJumpEnd"
delay_in_seconds = "0.0"

[node name="Bounce" type="Node" parent="PlayerState/Root/Wall Jumping"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Bounced")
event = &"Bounce"
delay_in_seconds = "0.0"

[node name="ColorState" type="Node" parent="."]
script = ExtResource("6_f1ek2")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="ColorState"]
script = ExtResource("7_tx1dd")
initial_state = NodePath("K")

[node name="K" type="Node" parent="ColorState/Root"]
script = ExtResource("8_gymyn")

[node name="Change K" type="Node" parent="ColorState/Root/K"]
script = ExtResource("9_pu2lt")
to = NodePath("../../K")
event = &"Change K"
delay_in_seconds = "0.0"

[node name="Change C" type="Node" parent="ColorState/Root/K"]
script = ExtResource("9_pu2lt")
to = NodePath("../../C")
event = &"Change C"
delay_in_seconds = "0.0"

[node name="Change Y" type="Node" parent="ColorState/Root/K"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Y")
event = &"Change Y"
delay_in_seconds = "0.0"

[node name="Change M" type="Node" parent="ColorState/Root/K"]
script = ExtResource("9_pu2lt")
to = NodePath("../../M")
event = &"Change M"
delay_in_seconds = "0.0"

[node name="C" type="Node" parent="ColorState/Root"]
script = ExtResource("8_gymyn")

[node name="Change K" type="Node" parent="ColorState/Root/C"]
script = ExtResource("9_pu2lt")
to = NodePath("../../K")
event = &"Change K"
delay_in_seconds = "0.0"

[node name="Change C" type="Node" parent="ColorState/Root/C"]
script = ExtResource("9_pu2lt")
to = NodePath("../../C")
event = &"Change C"
delay_in_seconds = "0.0"

[node name="Change Y" type="Node" parent="ColorState/Root/C"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Y")
event = &"Change Y"
delay_in_seconds = "0.0"

[node name="Change M" type="Node" parent="ColorState/Root/C"]
script = ExtResource("9_pu2lt")
to = NodePath("../../M")
event = &"Change M"
delay_in_seconds = "0.0"

[node name="Y" type="Node" parent="ColorState/Root"]
script = ExtResource("8_gymyn")

[node name="Change K" type="Node" parent="ColorState/Root/Y"]
script = ExtResource("9_pu2lt")
to = NodePath("../../K")
event = &"Change K"
delay_in_seconds = "0.0"

[node name="Change C" type="Node" parent="ColorState/Root/Y"]
script = ExtResource("9_pu2lt")
to = NodePath("../../C")
event = &"Change C"
delay_in_seconds = "0.0"

[node name="Change Y" type="Node" parent="ColorState/Root/Y"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Y")
event = &"Change Y"
delay_in_seconds = "0.0"

[node name="Change M" type="Node" parent="ColorState/Root/Y"]
script = ExtResource("9_pu2lt")
to = NodePath("../../M")
event = &"Change M"
delay_in_seconds = "0.0"

[node name="M" type="Node" parent="ColorState/Root"]
script = ExtResource("8_gymyn")

[node name="Change K" type="Node" parent="ColorState/Root/M"]
script = ExtResource("9_pu2lt")
to = NodePath("../../K")
event = &"Change K"
delay_in_seconds = "0.0"

[node name="Change C" type="Node" parent="ColorState/Root/M"]
script = ExtResource("9_pu2lt")
to = NodePath("../../C")
event = &"Change C"
delay_in_seconds = "0.0"

[node name="Change Y" type="Node" parent="ColorState/Root/M"]
script = ExtResource("9_pu2lt")
to = NodePath("../../Y")
event = &"Change Y"
delay_in_seconds = "0.0"

[node name="Change M" type="Node" parent="ColorState/Root/M"]
script = ExtResource("9_pu2lt")
to = NodePath("..")
event = &"Change M"
delay_in_seconds = "0.0"

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("11_uwngq")

[node name="InkCountHud" type="Label" parent="HUD"]
unique_name_in_owner = true
offset_right = 131.0
offset_bottom = 26.0
text = "K = 0  : C = 0 : Y = 0 : M = 0"

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_vbai1")
volume_db = -4.0
pitch_scale = 0.95

[connection signal="state_entered" from="PlayerState/Root/Bounced" to="." method="_on_bounced_state_entered"]
[connection signal="state_physics_processing" from="PlayerState/Root/Bounced" to="." method="_on_bounced_state_physics_processing"]
[connection signal="state_entered" from="PlayerState/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="PlayerState/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="PlayerState/Root/Walking" to="." method="_on_walking_state_entered"]
[connection signal="state_physics_processing" from="PlayerState/Root/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_entered" from="PlayerState/Root/Falling" to="." method="_on_falling_state_entered"]
[connection signal="state_physics_processing" from="PlayerState/Root/Falling" to="." method="_on_falling_state_physics_processing"]
[connection signal="state_entered" from="PlayerState/Root/Jumping" to="." method="_on_jumping_state_entered"]
[connection signal="state_physics_processing" from="PlayerState/Root/Jumping" to="." method="_on_jumping_state_physics_processing"]
[connection signal="state_entered" from="PlayerState/Root/Wall Jumping" to="." method="_on_wall_jumping_state_entered"]
[connection signal="state_exited" from="PlayerState/Root/Wall Jumping" to="." method="_on_wall_jumping_state_exited"]
[connection signal="state_physics_processing" from="PlayerState/Root/Wall Jumping" to="." method="_on_wall_jumping_state_physics_processing"]
[connection signal="state_entered" from="ColorState/Root/K" to="." method="_on_k_state_entered"]
[connection signal="state_entered" from="ColorState/Root/C" to="." method="_on_c_state_entered"]
[connection signal="state_entered" from="ColorState/Root/Y" to="." method="_on_y_state_entered"]
[connection signal="state_entered" from="ColorState/Root/M" to="." method="_on_m_state_entered"]
